--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
-import datetime as dt
-import time
-import requests
-import pandas as pd
-import numpy as np
-import plotly.express as px
+datetime
+time
+requests
+pandas 
+numpy 
+streamlit
+plotly
+matplotlib
